--- a/src/style/var.less
+++ b/src/style/var.less
@@ -114,7 +114,7 @@
 @badge-size: var(--badge-size);
 @badge-color: var(--badge-color);
 @badge-padding: var(--badge-padding);
-@badge-font-size: var(badge-font-size);
+@badge-font-size: var(--badge-font-size);
 @badge-font-weight: var(--badge-font-weight);
 @badge-border-width: var(--badge-border-width);
 @badge-background-color: var(--badge-background-color);
@@ -260,13 +260,13 @@
 @checkbox-disabled-background-color: var(--checkbox-disabled-background-color);
 
 // Circle
-@circle-size: 100px;
-@circle-color: @blue;
-@circle-layer-color: @white;
-@circle-text-color: @text-color;
-@circle-text-font-weight: @font-weight-bold;
-@circle-text-font-size: @font-size-md;
-@circle-text-line-height: @line-height-md;
+@circle-size: var(--circle-size);
+@circle-color: var(--circle-color);
+@circle-layer-color: var(--circle-layer-color);
+@circle-text-color: var(--circle-text-color);
+@circle-text-font-weight: var(--circle-text-font-weight);
+@circle-text-font-size: var(--circle-text-font-size);
+@circle-text-line-height: var(--circle-text-line-height);
 
 // Collapse
 @collapse-item-transition-duration: var(--collapse-item-transition-duration);
@@ -624,14 +624,14 @@
 @popup-close-icon-z-index: var(--popup-close-icon-z-index);
 
 // Progress
-@progress-height: 4px;
-@progress-color: @blue;
-@progress-background-color: @gray-3;
-@progress-pivot-padding: 0 5px;
-@progress-pivot-text-color: @white;
-@progress-pivot-font-size: @font-size-xs;
-@progress-pivot-line-height: 1.6;
-@progress-pivot-background-color: @blue;
+@progress-height: var(--progress-height);
+@progress-color: var(--progress-color);
+@progress-background-color: var(--progress-background-color);
+@progress-pivot-padding: var(--progress-pivot-padding);
+@progress-pivot-text-color: var(--progress-pivot-text-color);
+@progress-pivot-font-size: var(--progress-pivot-font-size);
+@progress-pivot-line-height: var(--progress-pivot-line-height);
+@progress-pivot-background-color: var(--progress-pivot-background-color);
 
 // PullRefresh
 @pull-refresh-head-height: 50px;
@@ -650,13 +650,13 @@
 @radio-disabled-background-color: var(--radio-disabled-background-color);
 
 // Rate
-@rate-icon-size: 20px;
-@rate-icon-gutter: @padding-base;
-@rate-icon-void-color: @gray-5;
-@rate-icon-full-color: @red;
-@rate-icon-disabled-color: @gray-5;
+@rate-icon-size: var(--rate-icon-size);
+@rate-icon-gutter: var(--rate-icon-gutter);
+@rate-icon-void-color: var(--rate-icon-void-color);
+@rate-icon-full-color: var(--rate-icon-full-color);
+@rate-icon-disabled-color: var(--rate-icon-disabled-color);
 
-// ShareSheet
+// ShareShe
 @share-sheet-header-padding: @padding-sm @padding-md @padding-base;
 @share-sheet-title-color: @text-color;
 @share-sheet-title-font-size: @font-size-md;
@@ -845,22 +845,22 @@
 @tabs-bottom-bar-color: var(--tabs-bottom-bar-color);
 
 // Tag
-@tag-padding: 0 @padding-base;
-@tag-text-color: @white;
-@tag-font-size: @font-size-sm;
-@tag-border-radius: 2px;
-@tag-line-height: 16px;
-@tag-medium-padding: 2px 6px;
-@tag-large-padding: @padding-base @padding-xs;
-@tag-large-border-radius: @border-radius-md;
-@tag-large-font-size: @font-size-md;
-@tag-round-border-radius: @border-radius-max;
-@tag-danger-color: @red;
-@tag-primary-color: @blue;
-@tag-success-color: @green;
-@tag-warning-color: @orange;
-@tag-default-color: @gray-6;
-@tag-plain-background-color: @white;
+@tag-padding: var(--tag-padding);
+@tag-text-color: var(--tag-text-color);
+@tag-font-size: var(--tag-font-size);
+@tag-border-radius: var(--tag-border-radius);
+@tag-line-height: var(--tag-line-height);
+@tag-medium-padding: var(--tag-medium-padding);
+@tag-large-padding: var(--tag-large-padding);
+@tag-large-border-radius: var(--tag-large-border-radius);
+@tag-large-font-size: var(--tag-large-font-size);
+@tag-round-border-radius: var(--tag-round-border-radius);
+@tag-danger-color: var(--tag-danger-color);
+@tag-primary-color: var(--tag-primary-color);
+@tag-success-color: var(--tag-success-color);
+@tag-warning-color: var(--tag-warning-color);
+@tag-default-color: var(--tag-default-color);
+@tag-plain-background-color: var(--tag-plain-background-color);
 
 // Toast
 @toast-max-width: 70%;
